tests/errors/rescue_legacy_try.dang
# The try/catch block syntax was replaced by postfix rescue; it still
# parses so the error can point at the fix (and dang fmt can migrate it).
let x = try {
  raise "boom"
} catch {
  err => "caught: " + err.message
}
print(x)
